<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/todoItemCard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp">

            <TextView
                android:id="@+id/todoItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TODO Item name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todoItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:text="Description" />

            <TextView
                android:id="@+id/todoItemDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="12 April 2017" />

            <Button
                android:id="@+id/todoItemDoneButton"
                style="@style/AwesomeIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@id/todoItemEditButton"
                android:text="@string/fa_done" />

            <Button
                android:id="@+id/todoItemEditButton"
                style="@style/AwesomeIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@id/todoItemDeleteButton"
                android:text="@string/fa_edit" />

            <Button
                android:id="@+id/todoItemDeleteButton"
                style="@style/AwesomeIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:text="@string/fa_delete" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>